HelloUltraviolet/Fixtures/RejectedSource/Procedures/ProcedureDeclarationsDiagnostic/Source/Main.uv
//! Rejected procedure specimen for procedure declaration diagnostics.

public procedure procedureDeclarationsDiagnosticReference() -> i32 {
    let value: i32 = 1
    value
}
